objects/copado__External_CI_Job__c.object
<CustomObject>
    <fields>
        <fullName>copado__Continue_on_failure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Continue on failure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>External CI Jobs</relationshipLabel>
        <relationshipName>External_CI_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__External_CI_Setting__c</fullName>
        <label>External CI Setting</label>
        <referenceTo>copado__External_CI_Setting__c</referenceTo>
        <relationshipLabel>External CI Jobs</relationshipLabel>
        <relationshipName>External_CI_Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Invoke_on__c</fullName>
        <label>Invoke on</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Before deployment</fullName>
                </value>
                <value>
                    <fullName>After deployment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Job_Api_Name__c</fullName>
        <label>Job Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Timeout_in_minutes__c</fullName>
        <label>Timeout in minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>External CI Jobs</relationshipLabel>
        <relationshipName>External_CI_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__dataJSON__c</fullName>
        <label>dataJSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>External CI Job</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__External_CI_Setting__c</columns>
        <columns>copado__Job_Api_Name__c</columns>
        <columns>copado__Invoke_on__c</columns>
        <columns>copado__Continue_on_failure__c</columns>
        <columns>copado__Timeout_in_minutes__c</columns>
        <columns>copado__User_Story__c</columns>
        <columns>copado__Environment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>External CI Jobs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External CI Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>